; ModuleID = '/home/carl/AnghaBench/lab/engine/code/client/extr_snd_codec_wav.c_S_FindRIFFChunk.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/client/extr_snd_codec_wav.c_S_FindRIFFChunk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FS_SEEK_CUR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @S_FindRIFFChunk to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @S_FindRIFFChunk(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca [5 x i8], align 1
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  br label %8

8:                                                ; preds = %20, %2
  %9 = load i32, i32* %4, align 4
  %10 = getelementptr inbounds [5 x i8], [5 x i8]* %6, i64 0, i64 0
  %11 = call i32 @S_ReadChunkInfo(i32 %9, i8* %10)
  store i32 %11, i32* %7, align 4
  %12 = icmp sge i32 %11, 0
  br i1 %12, label %13, label %27

13:                                               ; preds = %8
  %14 = getelementptr inbounds [5 x i8], [5 x i8]* %6, i64 0, i64 0
  %15 = load i8*, i8** %5, align 8
  %16 = call i32 @Q_strncmp(i8* %14, i8* %15, i32 4)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %20, label %18

18:                                               ; preds = %13
  %19 = load i32, i32* %7, align 4
  store i32 %19, i32* %3, align 4
  br label %28

20:                                               ; preds = %13
  %21 = load i32, i32* %7, align 4
  %22 = call i32 @PAD(i32 %21, i32 2)
  store i32 %22, i32* %7, align 4
  %23 = load i32, i32* %4, align 4
  %24 = load i32, i32* %7, align 4
  %25 = load i32, i32* @FS_SEEK_CUR, align 4
  %26 = call i32 @FS_Seek(i32 %23, i32 %24, i32 %25)
  br label %8

27:                                               ; preds = %8
  store i32 -1, i32* %3, align 4
  br label %28

28:                                               ; preds = %27, %18
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}

declare dso_local i32 @S_ReadChunkInfo(i32, i8*) #1

declare dso_local i32 @Q_strncmp(i8*, i8*, i32) #1

declare dso_local i32 @PAD(i32, i32) #1

declare dso_local i32 @FS_Seek(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
